GetUserRelations method now uses id from the path, not the body; hence it complies with the common principles of the http GET request. Memory leak in deleteSegmentFromDB is fixed. README.md is updated.
