# docs/swagger.yaml
@@ -99,38 +99,6 @@ paths:
       tags:
       - Segments
   /users:
-    get:
-      consumes:
-      - application/json
-      description: Get a list of segments in which the user with the specified ID
-        is located.
-      parameters:
-      - description: User ID
-        in: body
-        name: id
-        required: true
-        schema:
-          $ref: '#/definitions/models.ID'
-      produces:
-      - application/json
-      responses:
-        "200":
-          description: OK
-          schema:
-            items:
-              $ref: '#/definitions/models.Segment'
-            type: array
-        "400":
-          description: Bad Request
-          schema:
-            $ref: '#/definitions/models.Err'
-        "500":
-          description: Internal Server Error
-          schema:
-            $ref: '#/definitions/models.Err'
-      summary: Returns segments in which the user is located.
-      tags:
-      - Users
     patch:
       consumes:
       - application/json
@@ -158,6 +126,36 @@ paths:
           schema:
             $ref: '#/definitions/models.Err'
       summary: Modifies user's relations with segments.
+      tags:
+      - Users
+  /users/{id}:
+    get:
+      description: Get a list of segments in which the user with the specified ID
+        is located.
+      parameters:
+      - description: User ID
+        in: path
+        name: id
+        required: true
+        type: integer
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            items:
+              $ref: '#/definitions/models.Segment'
+            type: array
+        "400":
+          description: Bad Request
+          schema:
+            $ref: '#/definitions/models.Err'
+        "500":
+          description: Internal Server Error
+          schema:
+            $ref: '#/definitions/models.Err'
+      summary: Returns segments in which the user is located.
       tags:
       - Users
 swagger: "2.0"
